--- a/Source/TreasureGuide.Web/Views/Home/Index.cshtml
+++ b/Source/TreasureGuide.Web/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 <head>
     @{ Html.RenderPartial("_HeaderPartial"); }
     <title>Nakama Network</title>
+    <base href="/">
 </head>
 <body>
     @{ Html.RenderPartial("_CssPartial"); }
