--- a/Source/TreasureGuide.Web/src/css/teams.scss
+++ b/Source/TreasureGuide.Web/src/css/teams.scss
@@ -289,6 +289,9 @@ team-display {
     }
 }
 
+.similar-section {
+}
+
 team-box {
     position: relative;
 
@@ -377,7 +380,7 @@ team-box {
         position: absolute;
         top: 1.5em;
         left: -3px;
-        font-size: medium;
+        font-size: small;
         border-radius: 6px;
 
         * {
@@ -387,7 +390,7 @@ team-box {
         }
 
         .fa-credit-card, .fa-credit-card-alt {
-            font-size: smaller;
+            font-size: x-small;
         }
     }
 }
@@ -398,7 +401,7 @@ team-box {
     font-weight: bold;
     border: 1px solid;
     border-radius: 12px;
-    padding: 3px 8px;
+    padding: 2px 6px;
 }
 
 .score-text {
