--- a/Source/TreasureGuide.Web/src/views/boxes/detail.html
+++ b/Source/TreasureGuide.Web/src/views/boxes/detail.html
@@ -1,84 +1,12 @@
 ﻿<template>
     <loading-area if.bind="loading"></loading-area>
-    <div if.bind="!loading" with.bind="team">
+    <div if.bind="!loading" with.bind="box">
         <h1>${name}</h1>
-        <div class="row" auth-req="Moderator, Administrator">
-            <team-reports team.bind="team"></team-reports>
-            <div class="alert _danger" if.bind="deleted">
-                This team has been deleted.
-            </div>
-            <div class="alert _dark" if.bind="draft">
-                This team is saved as a draft--it is not yet visible to the public.
-            </div>
-        </div>
         <div class="row">
-            <a if.bind="canEdit" class="button _primary" route-href="route: teamEdit; params.bind: {id: id}">
+            <a if.bind="canEdit" class="button _primary" route-href="route: boxEdit; params.bind: {id: id}">
                 <i class="fa fa-fw fa-pencil"></i>
-                Edit Team
+                Edit Box
             </a>
-            <div class="_floatRight">
-                <score-display team-id.bind="id" score.bind="score" my-vote.two-way="myVote" my-bookmark.two-way="myBookmark" votable="true"></score-display>
-            </div>
-        </div>
-        <div class="row" if.bind="stageId">
-            <h4>Stage</h4>
-            <a route-href="route: stageDetails; params.bind: { id: stageId }">
-                <stage-display stage-id.bind="stageId"></stage-display>
-            </a>
-        </div>
-        <div class="row _alignCenter">
-            <h4>Team</h4>
-            <team-display team.bind="team"></team-display>
-            <ship-display ship-id.bind="shipId"></ship-display>
-            <br />
-            <a href.bind="calcLink" target="_blank" href="#" class="button _small _active">
-                <i class="fa fa-fw fa-calculator"></i>
-                Open in Damage Calculator
-            </a>
-        </div>
-        <div class="row" if.bind="teamSockets && teamSockets.length > 0">
-            <h2>Sockets</h2>
-            <socket-display sockets.bind="teamSockets"></socket-display>
-        </div>
-        <div class="row" if.bind="guide">
-            <h4>Guide</h4>
-            <markdown value.bind="guide"></markdown>
-        </div>
-        <div class="row" if.bind="credits">
-            <h4>Credits</h4>
-            <markdown value.bind="credits"></markdown>
-        </div>
-        <div class="row _alignRight">
-            Submitted by
-            <a route-href="route: account; params.bind: { id: submittedByName }">
-                <user-display name.bind="submittedByName" unit-id.bind="submittedByUnitId"></user-display>
-            </a>
-            on ${editedDate | dateTimeFormat}
-        </div>
-        <hr />
-        <div>
-            <button type="button" auth-req="Contributor" class="button _primary _floatRight" click.delegate="submitVideo()">
-                <i class="fa fa-fw fa-youtube"></i>
-                Submit Video
-            </button>
-            <h4>Videos</h4>
-            <div if.bind="sortedVideos.length === 0" class="_alignCenter">
-                <h5>No videos for this team yet. Why not submit one?</h5>
-            </div>
-            <div class="row _alignCenter" if.bind="ownerVideos.length > 0">
-                <div>
-                    <div class="col m4" repeat.for="video of ownerVideos">
-                        <video-display video.bind="video"></video-display>
-                    </div>
-                </div>
-            </div>
-            <div class="row _alignCenter" if.bind="otherVideos.length > 0">
-                <div>
-                    <div class="col m3" repeat.for="video of otherVideos">
-                        <video-display video.bind="video"></video-display>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </template>
