Adding detail page and updating search models to start using them.

--- a/Source/TreasureGuide.Web/src/views/boxes/detail.html
+++ b/Source/TreasureGuide.Web/src/views/boxes/detail.html
@@ -5,8 +5,39 @@
         <div class="row">
             <a if.bind="canEdit" class="button _primary" route-href="route: boxEdit; params.bind: {id: id}">
                 <i class="fa fa-fw fa-pencil"></i>
-                Edit Box
+                Edit Box Details
             </a>
+        </div>
+        <div class="row">
+            <div class="col m6">
+                <friend-id-display friend-id.bind="friendId" global.bind="global"></friend-id-display>
+            </div>
+            <div class="col m6 _alignRight">
+                Maintained by <a route-href="route: account; params.bind: { id: userName }">
+                    <user-display name.bind="userName" unit-id.bind="userUnitId"></user-display>
+                </a>
+            </div>
+        </div>
+        <div class="row">
+            <h4>Units</h4>
+            <unit-search model.two-way="searchModel" box-locked="true"></unit-search>
+            <loading-area if.bind="unitLoading"></loading-area>
+            <div if.bind="!unitLoading">
+                <div class="row">
+                    <search-pager search-model.bind="searchModel"></search-pager>
+                </div>
+                <div class="row _alignCenter">
+                    <div class="unit-collection">
+                        <unit-display repeat.for="unit of units"
+                                      model.bind="unit"
+                                      click.delegate="clicked(unit)">
+                        </unit-display>
+                    </div>
+                </div>
+                <div class="row">
+                    <search-pager search-model.bind="searchModel" bottom="true"></search-pager>
+                </div>
+            </div>
         </div>
     </div>
 </template>
