Checkbox utilities and unload protection.

--- a/Source/TreasureGuide.Web/src/views/boxes/detail.html
+++ b/Source/TreasureGuide.Web/src/views/boxes/detail.html
@@ -32,7 +32,8 @@
                     <div class="unit-collection">
                         <unit-display repeat.for="unit of units"
                                       model.bind="unit"
-                                      click.delegate="clicked(unit)">
+                                      click.delegate="clicked(unit)"
+                                      show-box="true">
                         </unit-display>
                     </div>
                 </div>
