--- a/Source/TreasureGuide.Web/src/views/boxes/detail.html
+++ b/Source/TreasureGuide.Web/src/views/boxes/detail.html
@@ -11,13 +11,13 @@
                     </a>
                 </div>
                 <div class="col m4">
-                    <button type="button" class="button _primary _width100" click.delegate="units()">
+                    <button type="button" class="button _primary _width100" click.delegate="openUnits()">
                         <i class="fa fa-fw fa-search-plus"></i>
                         Add/Remove Units
                     </button>
                 </div>
                 <div class="col m4">
-                    <button type="button" class="button _primary _width100" click.delegate="bulk()">
+                    <button type="button" class="button _primary _width100" click.delegate="openBulk()">
                         <i class="fa fa-fw fa-window-restore"></i>
                         Bulk Operations
                     </button>
