Adding box info on home page.

--- a/Source/TreasureGuide.Web/src/views/boring/intro.html
+++ b/Source/TreasureGuide.Web/src/views/boring/intro.html
@@ -28,6 +28,17 @@
                     </div>
                 </div>
             </div>
+            <div class="col m12">
+                <div class="card _white">
+                    <img src="/content/home/boxes.png" title="Maintain your Box" />
+                    <div class="-content">
+                        <h3>
+                            Keep track of the units you own and don't own and easily filter
+                            teams and units based on your box!
+                        </h3>
+                    </div>
+                </div>
+            </div>
             <div class="col m6">
                 <div class="card _white">
                     <img src="/content/home/videos.png" title="Submit YouTube Videos" />
