Adding box throttle and new menu lnf.

--- a/Source/TreasureGuide.Web/src/css/site.scss
+++ b/Source/TreasureGuide.Web/src/css/site.scss
@@ -229,3 +229,14 @@ iframe {
         margin: 0 3px;
     }
 }
+
+.fa-stack {
+    text-align: center;
+    height: inherit !important;
+
+    .fa-stack-1x, .fa-stack-2x {
+        bottom: 0;
+        transform: translateY(50%);
+        -webkit-transform: translateY(50%);
+    }
+}
