--- a/Source/TreasureGuide.Web/src/views/boring/intro.html
+++ b/Source/TreasureGuide.Web/src/views/boring/intro.html
@@ -55,7 +55,7 @@
                     <img src="/content/home/register.png" title="Social Media OAuth Login" />
                     <div class="-content">
                         <h3>
-                            <a href="/Account/Login">Register</a> quickly with a social media account.<br />
+                            <a href="#" click.delegate="login()">Register</a> quickly with a social media account.<br />
                             No passwords required!
                         </h3>
                     </div>
