--- a/Source/TreasureGuide.Web/src/views/boxes/detail.html
+++ b/Source/TreasureGuide.Web/src/views/boxes/detail.html
@@ -28,7 +28,7 @@
                     <friend-id-display friend-id.bind="friendId" global.bind="global"></friend-id-display>
                 </div>
                 <div class="col m6 _alignRight">
-                    Maintained by <a route-href="route: account; params.bind: { id: userName }">
+                    Maintained by <a route-href="route: profile; params.bind: { id: userName }">
                         <user-display name.bind="userName" unit-id.bind="userUnitId"></user-display>
                     </a>
                 </div>
