--- a/Source/TreasureGuide.Web/src/views/teams/detail.html
+++ b/Source/TreasureGuide.Web/src/views/teams/detail.html
@@ -50,7 +50,7 @@
         </div>
         <div class="row _alignRight">
             Submitted by
-            <a route-href="route: account; params.bind: { id: submittedByName }">
+            <a route-href="route: profile; params.bind: { id: submittedByName }">
                 <user-display name.bind="submittedByName" unit-id.bind="submittedByUnitId"></user-display>
             </a>
             on ${editedDate | dateTimeFormat}
