--- a/Source/TreasureGuide.Web/src/views/boxes/detail.html
+++ b/Source/TreasureGuide.Web/src/views/boxes/detail.html
@@ -4,25 +4,25 @@
         <div with.bind="box">
             <h1>${name}</h1>
             <div class="row" if.bind="canEdit">
-                <div class="col m3">
+                <div class="col d3">
                     <a class="button _primary _width100" route-href="route: boxEdit; params.bind: {id: id}">
                         <i class="fa fa-fw fa-pencil"></i>
                         Edit Box Details
                     </a>
                 </div>
-                <div class="col m3">
+                <div class="col d3">
                     <button type="button" class="button _primary _width100" click.delegate="openUnits()">
                         <i class="fa fa-fw fa-search-plus"></i>
                         Add/Remove Units
                     </button>
                 </div>
-                <div class="col m3">
+                <div class="col d3">
                     <button type="button" class="button _primary _width100" click.delegate="openFlags()">
                         <i class="fa fa-fw fa-star-o"></i>
                         Update Unit Details
                     </button>
                 </div>
-                <div class="col m3">
+                <div class="col d3">
                     <button type="button" class="button _primary _width100" click.delegate="openBulk()">
                         <i class="fa fa-fw fa-window-restore"></i>
                         Bulk Operations
@@ -40,18 +40,32 @@
                 </div>
             </div>
         </div>
+        <div if.bind="featuredUnits.length > 0">
+            <h2>Featured Units</h2>
+            <div class="unit-collection _alignCenter">
+                <unit-display repeat.for="unit of featuredUnits"
+                              model.bind="unit"
+                              box.bind="box"
+                              show-box-flags="true"
+                              size="huge">
+                </unit-display>
+            </div>
+        </div>
         <div>
-            <h4>Units</h4>
+            <h2>Units</h2>
             <unit-search model.two-way="searchModel" box-locked="true"></unit-search>
-            <loading-area if.bind="unitLoading"></loading-area>
-            <div if.bind="!unitLoading">
+            <loading-area if.bind="unitsLoading"></loading-area>
+            <div if.bind="!unitsLoading">
                 <div class="row">
                     <search-pager search-model.bind="searchModel"></search-pager>
                 </div>
                 <div class="row _alignCenter">
                     <div class="unit-collection">
                         <unit-display repeat.for="unit of units"
-                                      model.bind="unit">
+                                      model.bind="unit"
+                                      box.bind="box"
+                                      show-box-flags="true"
+                                      size="large">
                         </unit-display>
                     </div>
                 </div>
