Adding calc links to box units.

--- a/Source/TreasureGuide.Web/src/views/boxes/detail.html
+++ b/Source/TreasureGuide.Web/src/views/boxes/detail.html
@@ -45,6 +45,7 @@
             <div class="unit-collection _alignCenter">
                 <unit-display repeat.for="unit of featuredUnits"
                               model.bind="unit"
+                              info="true"
                               box.bind="box"
                               show-box-flags="true"
                               size="huge">
@@ -63,6 +64,7 @@
                     <div class="unit-collection">
                         <unit-display repeat.for="unit of units"
                                       model.bind="unit"
+                                      info="true"
                                       box.bind="box"
                                       show-box-flags="true"
                                       size="large">
