--- a/Source/TreasureGuide.Web/Views/Home/Index.cshtml
+++ b/Source/TreasureGuide.Web/Views/Home/Index.cshtml
@@ -26,6 +26,6 @@
             </style>
         </div>
     </div>
-    <script src="~/scripts/vendor-bundle-7878c03f46.js" data-main="aurelia-bootstrapper"></script>
+    <script src="~/scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
 </body>
 </html>
