--- a/Source/TreasureGuide.Web/src/views/support/index.html
+++ b/Source/TreasureGuide.Web/src/views/support/index.html
@@ -1,5 +1,56 @@
 ﻿<template>
     <h1>Donate</h1>
-    <p>Give me money.</p>
-    <button type="button" class="_success _xlarge" click.delegate="go()">Support</button>
+    <p>Support Nakama Network's development by donating $1.00 (USD) or more and gain the following perks <em>for life!</em></p>
+    <div class="note _successLight donor-info">
+        <ul>
+            <li repeat.for="perk of perks" innerhtml.bind="perk"></li>
+        </ul>
+    </div>
+
+    <form with.bind="model">
+        <fieldset>
+            <legend>Donate</legend>
+            <div class="form-group">
+                <div class="_width100">
+                    <label for="amount">Amount</label>
+                    <input type="number" min="1.00" step="0.25" max="500.00" value.bind="amount & validate" />
+                    USD
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea value.bind="message & validate" class="_width100" placeholder="You're so talented and handsome!"></textarea>
+                <div class="field-length">${messageLength}</div>
+            </div>
+            <div class="form-group">
+                <label for="publicInput">
+                    <input type="checkbox" id="publicInput" checked.bind="deleted" />
+                    <span class="-label-body">
+                        Display Donation Publicly
+                    </span>
+                </label>
+            </div>
+
+            <div if.bind="!loggedIn">
+                <div class="alert _danger">
+                    <i class="fa fa-fx fa-warning"></i>
+                    Please login before donating to ensure you get your donor perks!
+                </div>
+            </div>
+            <div if.bind="alreadyDonated">
+                <div class="alert _warning">
+                    <i class="fa fa-fx fa-exclamation-circle"></i>
+                    You already have donor perks on this account. But feel free to donate again!
+                    <i class="fa fa-fw fa-smile-o"></i>
+                </div>
+            </div>
+
+            <div class="_alignRight">
+                <button type="submit" class="_primary" click.delegate="submit()">
+                    <i class="fa fa-fw fa-paypal"></i>
+                    Donate with PayPal
+                </button>
+            </div>
+        </fieldset>
+    </form>
 </template>
