Shuffling around donation stuff.

--- a/Source/TreasureGuide.Web/src/views/donate/cancel.html
+++ b/Source/TreasureGuide.Web/src/views/donate/cancel.html
@@ -1,5 +1,11 @@
 ﻿<template>
-    <h1>Donate</h1>
-    <p>Your donation has been received! We're now updating your perks on our side.</p>
-    <loading-area></loading-area>
+    <div class="alert _alignCenter _warning" if.bind="processing">
+        <h3>Your donation has been cancelled.</h3>
+        <h4>We're updating a few things on our end... Feel free to go back to browsing.</h4>
+        <loading-area></loading-area>
+    </div>
+    <div class="alert _alignCenter _warningLight _width100" if.bind="result">
+        <h3>Your donation has been cancelled.</h3>
+        <p>Thank you for your consideration!</p>
+    </div>
 </template>
