--- a/Source/TreasureGuide.Web/src/views/donate/index.html
+++ b/Source/TreasureGuide.Web/src/views/donate/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label for="message">Message</label>
-                <textarea value.bind="message & validate" class="_width100" placeholder="You're so talented and handsome!"></textarea>
+                <textarea value.bind="message & validate" class="_width100"></textarea>
                 <div class="field-length">${messageLength}</div>
             </div>
             <div class="form-group">
