Adding donor list.

--- a/Source/TreasureGuide.Web/src/views/donate/cancel.html
+++ b/Source/TreasureGuide.Web/src/views/donate/cancel.html
@@ -6,6 +6,6 @@
     </div>
     <div class="alert _alignCenter _warningLight _width100" if.bind="result">
         <h3>Your donation has been cancelled.</h3>
-        <p>Thank you for your consideration!</p>
+        <p>Thank you for the consideration!</p>
     </div>
 </template>
