--- a/Source/TreasureGuide.Web/src/views/donate/index.html
+++ b/Source/TreasureGuide.Web/src/views/donate/index.html
@@ -20,12 +20,12 @@
             </div>
             <div class="form-group">
                 <label for="message">Message</label>
-                <textarea value.bind="message & validate" class="_width100"></textarea>
+                <textarea value.bind="message & validate" class="_width100" placeholder="Shukko da!"></textarea>
                 <div class="field-length">${messageLength}</div>
             </div>
             <div class="form-group">
                 <label for="publicInput">
-                    <input type="checkbox" id="publicInput" checked.bind="deleted" />
+                    <input type="checkbox" id="publicInput" checked.bind="public" />
                     <span class="-label-body">
                         Display Donation Publicly
                     </span>
