Updating refresh logic.

--- a/Source/TreasureGuide.Web/src/views/admin/index.html
+++ b/Source/TreasureGuide.Web/src/views/admin/index.html
@@ -3,10 +3,15 @@
     <h2>Tools</h2>
     <div class="row">
         <div class="col m6">
-            <button type="button" click.delegate="createTeam(false)">Random Team</button>
+            <button type="button" class="_width100" click.delegate="createTeam(false)">Random Team</button>
         </div>
         <div class="col m6">
-            <button type="button" click.delegate="createTeam(true)">Super Random Team</button>
+            <button type="button" class="_width100" click.delegate="createTeam(true)">Super Random Team</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col m6">
+            <button type="button" class="_width100" click.delegate="refreshDonations()">Refresh Donations</button>
         </div>
     </div>
     <h2>User Management</h2>
