--- a/Source/TreasureGuide.Web/src/css/site.scss
+++ b/Source/TreasureGuide.Web/src/css/site.scss
@@ -254,3 +254,38 @@ iframe {
         margin-bottom: 0;
     }
 }
+
+.donor-user {
+    color: $donorStart-color;
+    animation: donorAnimation 2s infinite;
+    -webkit-animation: donorAnimation 2s infinite;
+    font-weight: bolder;
+}
+
+@keyframes donorAnimation {
+    0% {
+        color: $donorStart-color;
+    }
+
+    50% {
+        color: $donorEnd-color;
+    }
+
+    100% {
+        color: $donorStart-color;
+    }
+}
+
+@-webkit-keyframes donorAnimation {
+    0% {
+        color: $donorStart-color;
+    }
+
+    50% {
+        color: $donorEnd-color;
+    }
+
+    100% {
+        color: $donorStart-color;
+    }
+}
