--- a/Source/TreasureGuide.Web/src/views/boxes/detail.html
+++ b/Source/TreasureGuide.Web/src/views/boxes/detail.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="col m6 _alignRight">
                     Maintained by <a route-href="route: profile; params.bind: { id: userName }">
-                        <user-display name.bind="userName" unit-id.bind="userUnitId"></user-display>
+                        <user-display name.bind="userName" unit-id.bind="userUnitId" donor.bind="userIsDonor"></user-display>
                     </a>
                 </div>
             </div>
